--- a/dsa/basic/Practice.ipynb
+++ b/dsa/basic/Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0aa70e6c",
    "metadata": {},
    "outputs": [
@@ -15,11 +15,19 @@
     }
    ],
    "source": [
-    "#Printing and Farmating\n",
+    "#Printing and Formating\n",
     "\n",
     "print('admin ',\"kavin\",end='| ')\n",
     "print(\"Gokul\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b12c425",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -36,7 +44,7 @@
     "IsEasy = True\n",
     "\n",
     "print(\"My Name is \",name,\"I am \",age,\n",
-    "\"Years old\",height,\" cm tall , and learning \",language,\" : \",IsEasy)\n",
+    "\"Years old\",height,\" CM tall , and learning \",language,\" : \",IsEasy)\n",
     "print(type(name))"
    ]
   },
