Input Error Resolved

--- a/python-practice/06_loops.ipynb
+++ b/python-practice/06_loops.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "335cdeab",
    "metadata": {},
    "outputs": [
@@ -80,25 +80,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0*4= 0\n",
-      "1*4= 4\n",
-      "2*4= 8\n",
-      "3*4= 12\n",
-      "4*4= 16\n",
-      "5*4= 20\n",
-      "6*4= 24\n",
-      "7*4= 28\n",
-      "8*4= 32\n",
-      "9*4= 36\n",
-      "10*4= 40\n"
+      "0*11= 0\n",
+      "1*11= 11\n",
+      "2*11= 22\n",
+      "3*11= 33\n",
+      "4*11= 44\n",
+      "5*11= 55\n",
+      "6*11= 66\n",
+      "7*11= 77\n",
+      "8*11= 88\n",
+      "9*11= 99\n",
+      "10*11= 110\n"
      ]
     }
    ],
    "source": [
     "# Q4: Print the multiplication table of a number entered by user (1 to 10)\n",
-    "input=int(input())\n",
+    "user_input = int(input())\n",
     "for i in range(11):\n",
-    "    print(f\"{i}*{input}=\",i*input)"
+    "    print(f\"{i}*{user_input}=\",i*user_input)"
    ]
   },
   {
@@ -132,19 +132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "f4b07790",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m total = \u001b[32m0\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m val = \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mEnter a number (0 to stop): \u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m val != \u001b[32m0\u001b[39m:\n\u001b[32m      5\u001b[39m     total += val\n",
-      "\u001b[31mTypeError\u001b[39m: 'int' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total sum: 55\n"
      ]
     }
    ],
