--- a/python-practice/06_loops.ipynb
+++ b/python-practice/06_loops.ipynb
@@ -154,6 +154,75 @@
     "\n",
     "print(\"Total sum:\", total)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e97db976",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q7: Ask for username until correct one is entered (\"admin\")\n",
+    "\n",
+    "username = input()\n",
+    "while(username!=\"admin\"):\n",
+    "    username=input()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf61df43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5e9b4ea8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access Denied\n",
+      "Access Denied\n",
+      "Account Locked\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q9: Ask for a password until correct one is entered.\n",
+    "# Allow max 3 tries, then lock access.\n",
+    "\n",
+    "\n",
+    "count=0\n",
+    "while True:\n",
+    "    username=input()\n",
+    "    password=input()\n",
+    "    if username==\"root\" and password==\"root\":\n",
+    "        print(\"Grand Access\")\n",
+    "    elif count>1:\n",
+    "        print(\"Account Locked\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Access Denied\")\n",
+    "        count+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c3059a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q10: Loop through a list and print elements in reverse using a for loop\n",
+    "\n",
+    "list = [1,2,'admin',\"hello\"]"
+   ]
   }
  ],
  "metadata": {
