Map_Reduce_Filter Concepts completed

--- a/python-core/oops/08_class_and_static_methods.ipynb
+++ b/python-core/oops/08_class_and_static_methods.ipynb
@@ -130,6 +130,58 @@
     "\n",
     "Car.general_info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "caf29270",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amazon\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q3: Create class `Employee` with class variable `company = \"TCS\"`.\n",
+    "# Write @classmethod to change company name.\n",
+    "# Create object, change company using class method, then print.\n",
+    "\n",
+    "class Emplyee:\n",
+    "    company=\"TCS\"\n",
+    "    def change_name(cls):\n",
+    "        cls.company=\"Amazon\"\n",
+    "        print(cls.company)\n",
+    "c1=Emplyee()\n",
+    "c1.change_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0f3f75b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employess must follow TATA Code of Conduct\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q4: BONUS – Add static method to `Employee` called `rules()` \n",
+    "# which prints \"Employees must follow code of conduct.\"\n",
+    "\n",
+    "class Employee:\n",
+    "    def rules():\n",
+    "        print(\"Employess must follow TATA Code of Conduct\")\n",
+    "Employee.rules()\n"
+   ]
   }
  ],
  "metadata": {
