NLP Learning Started

--- a/python-core/07_functions.ipynb
+++ b/python-core/07_functions.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "45226520",
    "metadata": {},
    "outputs": [
@@ -193,11 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a\n",
-      "i\n",
-      "i\n",
-      "a\n",
-      "e\n"
+      "5\n"
      ]
     }
    ],
@@ -205,9 +201,11 @@
     "# Q7: Write a function to count vowels in a given string\n",
     "\n",
     "def vowels_count(word):\n",
+    "    count=0\n",
     "    for i in word:\n",
     "        if(i in 'aeiou'):\n",
     "            count+=1\n",
+    "    print(count)\n",
     "    \n",
     "\n",
     "vowels_count(\"administrater\")"
