--- a/python-core/05_lists_dicts.ipynb
+++ b/python-core/05_lists_dicts.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "3ce83445",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'shoe': '1000', 'bat': '1230', 'kettle': '900'}\n"
+      "{'23': '2', '34': '5', '43': '6'}\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -184,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
