--- a/python-core/06_loops.ipynb
+++ b/python-core/06_loops.ipynb
@@ -217,17 +217,25 @@
    "execution_count": null,
    "id": "5c3059a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'admin', 'hello']\n"
+     ]
+    }
+   ],
    "source": [
     "# Q10: Loop through a list and print elements in reverse using a for loop\n",
     "\n",
-    "list = [1,2,'admin',\"hello\"]"
+    "list = [1,2,'admin',\"hello\"]\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -241,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
