--- a/python-core/09_Sets.ipynb
+++ b/python-core/09_Sets.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0e393b49",
    "metadata": {},
    "outputs": [
@@ -119,8 +119,7 @@
      "text": [
       "{1, 2, 3, 4, 5, 6}\n",
       "{1, 2}\n",
-      "{3, 4}\n",
-      "False\n"
+      "{3, 4}\n"
      ]
     }
    ],
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "066a69f2",
    "metadata": {},
    "outputs": [
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "06c41621",
    "metadata": {},
    "outputs": [
@@ -172,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'i', 'u', 'a', 'e', 'o'}\n"
+      "{'i', 'a'}\n"
      ]
     }
    ],
@@ -192,7 +191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -206,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
